--- a/tex/chap_multipactor.tex
+++ b/tex/chap_multipactor.tex
@@ -4,6 +4,7 @@
 \setchapterpreamble[u]{\margintoc}
 \chapter{Multipactor}\label{chap:Multipactor}
 
+\epigraph{There is all the difference in the world between knowing about and knowing how to do.}{James Evans, The History and Practice of Ancient Astronomy}
 
 
 Since RF breakdowns are a recurrent problematic in high RF power applications, the last section of this chapter~\ref{sec:Multipactor} is fully dedicated to this topic, in particular to the multipactor phenomenon which occurs in vacuum environments and led to collaboration between CNES, ONERA and CEA since 2014.
